lustre/utils/liblustreapi.c
@@ -364,7 +364,7 @@ int llapi_ioctl_unpack(struct obd_ioctl_data *data, char *pbuf, int max_len)
 	char *ptr;
 
 	if (pbuf == NULL)
-		return 1;
+		return -EINVAL;
 
 	overlay = (struct obd_ioctl_data *)pbuf;
 
